css/style.css
@font-face {
  font-family: "brandon";
  font-weight: bold;
  src: url("../fonts/Brandon_bld.otf");
}
@font-face {
  font-family: "brandon";
  src: url("../fonts/Brandon_reg.otf");
}
@font-face {
  font-family: "Sentinel";
  src: url("../fonts/Sentinel-Book.otf");
}
@font-face {
  font-family: "Sentinel";
  font-weight: bold;
  src: url("../fonts/Sentinel-Bold.otf");
}
@font-face {
  font-family: "Sentinel";
  font-weight: bold;
  src: url("../fonts/Sentinel-Bold.otf");
}
@font-face {
  font-family: "Sentinel";
  font-weight: bold;
  font-style: italic;
  src: url("../fonts/Sentinel-BoldItalic.otf");
}



body {
  font: 14pt/1.5 sentinel;
  background-color: rgb(252, 217, 0);
}
.background {
  position:fixed;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 140%;
  transition: 200ms ease-in-out;
}
body.yellow .background {
  background-color: rgb(255, 233, 93);
}
body.white .background {
  background-color: #FFF;
}

a {
  border-bottom: 1px solid;
  color: #000;
  font-weight: bold;
}
a:hover {
  color: #555;
  text-decoration: none;
}
h1,h2,h3,h4,h5,h6 {
  font-family: brandon;
  font-weight: bold;
}
h1 {
  font-size: 5rem;
}
h2 {
  font-size: 4rem;
}
.hidden {
  opacity: 0;
}

#shapes * {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -13337px;
  width: 0px;
  height: 0px;
  left: -13337px;
}
.btn {
  background: rgb(252, 217, 0);
  padding: 15px 40px;
  font-family: brandon;
  font-weight: bold;
  font-size: 1.8rem;
  overflow: hidden;
  position: relative;
  border: none;
  border-radius: 5px;
  z-index: 0;
  text-transform: uppercase;
  transition: 200ms ease-in-out;
}
body.yellow .btn {
  background: #FFF;
}
.btn:after {
  content: '';
  position: absolute;
  top: 100%;
  width: 200%;
  height: 500%;
  background: #000;
  border-radius: 5px;
  transform: rotateZ(45deg);
  left: -150%;
  transition: 400ms ease-in-out;
  z-index: -1;
}
.btn:hover {
  color: #FFF;
}
.btn:hover:after {
  top: -200%;
  left: -50%;
}

nav.navbar {
  padding: 30px 40px;
  border: none;
  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 10%, rgba(255,255,255,0) 100%);
}
nav ul.nav {
  font: 1.2em/1 brandon;
  color: #000;
}
.nav>li>a {
  padding: 8px 0;
  margin: 0 20px;
  font-weight: bold;
  background: none !important;
  border-bottom: 5px solid transparent;
  transition: all 200ms ease-in-out;
}
.nav:hover>li.active>a {
  border-bottom: 5px solid transparent;
}
.nav>li>a:hover, .nav>li>a:visited {
  background: none;
  border-bottom: 5px solid #FDDB00;
  border-radius: 0;
  color: #000;
}
.nav-pills>li.active>a,
.nav-pills>li.active>a:focus,
.nav-pills>li.active>a:hover {
  background: none;
  color: #000;
  border-bottom: 5px solid #FDDB00;
  border-radius: 0;
}
.nav>li>a.blog:hover {
  border-bottom: 5px solid #00D6C9;
}


.jumbotron {
  min-height: 100vh;
  background: none;
}
#overview .logo {
  margin-top: 10vh;
}
#overview {
  text-align: center;
}
#overview .title {
  font-size: 5rem;
  text-transform: uppercase;
  letter-spacing: 1.5rem;
  text-indent: 1.5rem;
  margin: 0;
}
#overview .subtitle {
  font-size: 2rem;
}
#overview .buttons {
  margin-top: 40px;
}

#faq .question:nth-child(even) {
  margin-bottom: 70px;
  float: left;
}

#faq .question:nth-child(odd) {
  margin-top: 70px;
  float: right;
}
#faq {
  margin-bottom: 50px;
}

#contact {
  padding: 50px;
  border: 5px solid rgba(0,0,0,0.1);
}
#contact h2 {
  margin: 0;
}
#contact .location {
  padding: 20px;
  background: #eee;
  font-family: brandon;
  display: inline-block;
  border-radius: 5px;
}

footer {
  margin-top: 100px;
}
footer li {
  float: right;
  list-style: none;
}
footer li a {
  border-bottom: none;
  margin: 0 20px;
}
footer .launchdfw {
  width:25px;
  position:relative;
  top:-5px;
  height:auto;
}
footer .fa-heart {
  color: #EA4E4E;
}

@media only screen and (max-width: 1000px) {
  #overview .title {
      font-size: 3rem;
      letter-spacing: 1rem;
      text-indent: 1rem;
  }
  #contact {
    padding: 20px;
    margin: 20px;
  }
  #faq .question {
    margin: 10px auto !important;
    float: left !important;
  }
}

